force-app/main/default/objects/CharactDetailValue__c/CharactDetailValue__c.object-meta.xml
<CustomObject>
    <label>Charact Detail Value</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>RowNum</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charact Detail Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>