force-app/main/default/objects/CharactDetailValue__c/fields/CharactDetail__c.field-meta.xml
<CustomField>
    <fullName>CharactDetail__c</fullName>
    <label>Charact Detail</label>
    <referenceTo>CharactDetails__c</referenceTo>
    <relationshipLabel>Charact Detail Values</relationshipLabel>
    <relationshipName>Charact_Detail_Values</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>