force-app/main/default/objects/CharactDetailValue__c/fields/Param__c.field-meta.xml
<CustomField>
    <fullName>Param__c</fullName>
    <label>Parameter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CharactValueTypes</valueSetName>
    </valueSet>
</CustomField>