force-app/main/default/objects/CharactDetailValue__c/fields/ParamValue__c.field-meta.xml
<CustomField>
    <fullName>ParamValue__c</fullName>
    <label>Param Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>